#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */

/* Variables and functions */
 scalar_t__ string_is_equal (char const*,char*) ; 

__attribute__((used)) static bool null_midi_set_output(void *p, const char *output)
{
   (void)p;

   return output == NULL || string_is_equal(output, "Null");
}